--- a/src/main/resources/report/AutorizacaoConsultaSalutar.jrxml
+++ b/src/main/resources/report/AutorizacaoConsultaSalutar.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="AutorizacaoConsultaSalutar" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="6e5cb6bb-a46d-4966-8052-3c018589ea7c">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="358"/>
 	<property name="ireport.callouts" value="##Mon Dec 30 12:07:51 GMT-03:00 2019"/>
 	<parameter name="id" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -11,7 +11,7 @@
 	<queryString>
 		<![CDATA[Select distinct ag.dataexame, ag.hora, ag.situacao, f.nome, f.rg, f.cpf, f.datanascimento, s.nome as nomesetor,
 fc.nome as nomefuncao, fc.cbo, f.pis, f.ctps, f.serie, f.uf, t.nome as tipoexame, l.razaosocial, l.cnpj, fn.nome as novaFuncao,
-t.idasotipo
+t.idasotipo, ag.avaliacaomedica, ag.examescomplementares, ag.manipulacaoalimentos
 from
 asoagenda ag join funcionario  f on ag.funcionario_idfuncionario = f.idfuncionario
 join funcao fc on f.funcao_idfuncao = fc.idfuncao
@@ -68,6 +68,15 @@ where ag.idasoagenda = $P{id}]]>
 	</field>
 	<field name="novaFuncao" class="java.lang.String"/>
 	<field name="idasotipo" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="avaliacaomedica" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="examescomplementares" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="manipulacaoalimentos" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<title>
@@ -319,7 +328,7 @@ where ag.idasoagenda = $P{id}]]>
 			</staticText>
 			<staticText>
 				<reportElement x="144" y="283" width="124" height="14" uuid="e83cc35b-de95-4333-9f58-30a81d11d666"/>
-				<text><![CDATA[PERÍODICO]]></text>
+				<text><![CDATA[PERIÓDICO]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="144" y="324" width="150" height="14" uuid="d30d969a-fe6f-423a-8ac4-904eff09cf68"/>
@@ -331,15 +340,10 @@ where ag.idasoagenda = $P{id}]]>
 			</staticText>
 			<staticText>
 				<reportElement x="144" y="364" width="165" height="14" uuid="a9678b73-33f8-49c6-86c9-f5f153ad993d"/>
+				<textElement>
+					<font isBold="false"/>
+				</textElement>
 				<text><![CDATA[MANIPULAÇÃO DE ALIMENTOS]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="144" y="384" width="150" height="14" uuid="2bc69cc5-63fc-40a3-9a93-fe1e863a0221"/>
-				<text><![CDATA[AVALIAÇÃO MÉDICA]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="144" y="403" width="161" height="14" uuid="40b7c599-6e55-48a0-a57f-a2646700d0ce"/>
-				<text><![CDATA[EXAMES COMPLEMENTARES]]></text>
 			</staticText>
 			<rectangle>
 				<reportElement x="135" y="300" width="420" height="20" uuid="962f2e5c-8f20-4f95-ae28-5d1ca066ffa4"/>
@@ -487,6 +491,41 @@ where ag.idasoagenda = $P{id}]]>
 			<textField>
 				<reportElement x="143" y="3" width="408" height="14" uuid="74c9ef81-d6dc-4be6-9488-29413dbafa2a"/>
 				<textFieldExpression><![CDATA[$F{razaosocial}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="7" y="364" width="121" height="14" uuid="124684df-c528-4794-8cd6-1e31faed8842"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[( $F{manipulacaoalimentos}.equals( "S" ) ? "X" : " " )]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="7" y="384" width="121" height="14" uuid="8f04b820-bac8-45bc-a7d6-7267a36499e9"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[( $F{avaliacaomedica}.length()>2 ? "X" : " " )]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="7" y="403" width="121" height="14" uuid="d58e16af-f913-46b1-803d-352224ad08fa"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[( $F{examescomplementares}.length()>2 ? "X" : " " )]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="144" y="384" width="405" height="14" uuid="283b36a2-cf59-4c16-9db9-4d522017f454"/>
+				<textElement>
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA["AVALIAÇÃO MÉDICA "  + $F{avaliacaomedica}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="144" y="403" width="405" height="14" uuid="de741f0e-4617-43ae-ab62-435543d09c95"/>
+				<textElement>
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA["EXAMES COMPLEMENTARES " + $F{examescomplementares}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
