--- a/src/main/resources/report/rs/relatoriors.jrxml
+++ b/src/main/resources/report/rs/relatoriors.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="RelatorioSeguranca" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="6e5cb6bb-a46d-4966-8052-3c018589ea7c">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="359"/>
 	<property name="ireport.callouts" value="##Mon Dec 30 12:07:51 GMT-03:00 2019"/>
 	<parameter name="id" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -220,7 +220,45 @@ order by s.nome, i.idrelatoriosegurancaitens]]>
 			</staticText>
 		</band>
 	</title>
-	<pageHeader>
-		<band height="50"/>
-	</pageHeader>
+	<detail>
+		<band height="190">
+			<rectangle>
+				<reportElement x="0" y="1" width="227" height="188" uuid="c6b104ec-89be-4be1-bbda-3f7a7a3c5a5b"/>
+			</rectangle>
+			<rectangle>
+				<reportElement x="227" y="1" width="328" height="20" uuid="d4c32fe7-2c03-4728-8467-0d3c284ab9bf"/>
+			</rectangle>
+			<textField>
+				<reportElement x="233" y="4" width="316" height="14" uuid="3d62f3a2-d09d-4734-aa12-94c9293cd0ff"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Setor: " + $F{nomesetor}]]></textFieldExpression>
+			</textField>
+			<rectangle>
+				<reportElement x="227" y="26" width="328" height="80" uuid="7c040d09-c96b-4149-b210-58ed5b87fdab"/>
+			</rectangle>
+			<rectangle>
+				<reportElement x="227" y="109" width="328" height="80" uuid="0e5b59ed-b177-4816-9036-c4834cf78a26"/>
+			</rectangle>
+			<textField>
+				<reportElement x="233" y="30" width="316" height="72" uuid="e5275490-08a7-451d-9319-b1a2bc7d8799"/>
+				<textElement textAlignment="Justified">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA["CONSTATAÇÃO: " + $F{constatacao}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="233" y="113" width="316" height="72" uuid="2fd7bd61-2779-49ea-8518-0dee39b06f2c"/>
+				<textElement textAlignment="Justified">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[( $F{adequacao}.isEmpty() ? "" : "ADEQUAÇÃO: " + $F{adequacao})]]></textFieldExpression>
+			</textField>
+			<image>
+				<reportElement x="6" y="6" width="210" height="179" uuid="f94a381d-616c-4707-a0f5-36f18ac0e8d7"/>
+				<imageExpression><![CDATA[$F{urlfoto}]]></imageExpression>
+			</image>
+		</band>
+	</detail>
 </jasperReport>
