--- a/src/main/resources/report/agenda/AutorizacaoLaboratorioUnidos.jrxml
+++ b/src/main/resources/report/agenda/AutorizacaoLaboratorioUnidos.jrxml
@@ -8,24 +8,22 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="logo" class="java.awt.Image" isForPrompting="false"/>
-	<parameter name="asotipo" class="java.lang.Integer" isForPrompting="false"/>
-	<parameter name="tipoexame" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="exames" class="java.lang.String" isForPrompting="false"/>
-	<parameter name="clinica" class="java.lang.String" isForPrompting="false"/>
-	<parameter name="endereco" class="java.lang.String" isForPrompting="false"/>
-	<parameter name="cidade" class="java.lang.String" isForPrompting="false"/>
-	<parameter name="fone" class="java.lang.String" isForPrompting="false"/>
 	<queryString>
 		<![CDATA[Select distinct ag.dataexame, ag.hora, ag.situacao, f.nome, f.rg, f.cpf, f.datanascimento, s.nome as nomesetor,
-fc.nome as nomefuncao, fc.cbo, f.pis, f.ctps, f.serie, f.uf, l.razaosocial, l.cnpj, fn.nome as novaFuncao, l.nome as unidade
+fc.nome as nomefuncao, fc.cbo, f.pis, f.ctps, f.serie, f.uf, l.razaosocial, l.cnpj, fn.nome as novaFuncao, l.nome as unidade,
+at.nome as nomeaso, at.idasotipo
 from
 asoagenda ag join funcionario  f on ag.funcionario_idfuncionario = f.idfuncionario
 join funcao fc on f.funcao_idfuncao = fc.idfuncao
 join setor s on f.setor_idsetor = s.idsetor
 join loja l on f.loja_idloja = l.idloja
 join funcao fn on ag.funcao_idfuncao = fn.idfuncao
+join agendaexame ex on ag.idasoagenda = ex.asoagenda_idasoagenda
+join asotipo at on ex.asotipo_idasotipo = at.idasotipo
 
-where ag.idasoagenda = $P{id}]]>
+where ag.idasoagenda = $P{id}  and at.categoria= "aso"
+]]>
 	</queryString>
 	<field name="dataexame" class="java.sql.Date">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -73,6 +71,10 @@ where ag.idasoagenda = $P{id}]]>
 	</field>
 	<field name="novaFuncao" class="java.lang.String"/>
 	<field name="unidade" class="java.lang.String"/>
+	<field name="nomeaso" class="java.lang.String"/>
+	<field name="idasotipo" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<title>
 		<band height="58" splitType="Stretch">
 			<rectangle>
@@ -180,11 +182,11 @@ where ag.idasoagenda = $P{id}]]>
 			</textField>
 			<textField>
 				<reportElement x="141" y="83" width="408" height="14" uuid="e4586cc7-a39b-4d04-92ae-09fe57551199"/>
-				<textFieldExpression><![CDATA[( $P{asotipo}.equals( 3 ) ? $F{novaFuncao} : " " )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[( $F{idasotipo}.equals( 3 ) ? $F{novaFuncao} : " " )]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
 				<reportElement x="141" y="103" width="408" height="14" uuid="d1f2bb3b-8c0a-4b82-9f1e-cb265e687eb1"/>
-				<textFieldExpression><![CDATA[$P{tipoexame}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nomeaso}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="4" y="125" width="545" height="14" forecolor="#FF0000" uuid="d2f9b274-31ee-4711-8d9c-73c38bed6c5b"/>
@@ -240,7 +242,7 @@ Obs.: horário de coleta 07:00 ÁS 16:00h
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{clinica}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["CLASS SAÚDE -MEDICINA OCUPACIONAL LTDA – (SALUTAR)"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="13" y="546" width="536" height="14" uuid="de741f0e-4617-43ae-ab62-435543d09c95"/>
@@ -347,7 +349,7 @@ Obs.: Horário de coleta 07:00 AS 10:30h .]]></text>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{endereco}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["RUA JERÒNIMO COELHO, 170 – SLAS. 901/902 – ED. CEISA"]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="8" y="610" width="46" height="14" uuid="1fd89670-8baa-43bd-9f74-408cd5d0d19a"/>
@@ -361,7 +363,7 @@ Obs.: Horário de coleta 07:00 AS 10:30h .]]></text>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{cidade}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["FLORIANOPOLIS (SC)"]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="8" y="630" width="46" height="14" uuid="59722e3d-66fd-4355-b432-bf5251d1b512"/>
@@ -375,7 +377,7 @@ Obs.: Horário de coleta 07:00 AS 10:30h .]]></text>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{fone}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["(48) 3028-8050 Guilherme / Sandra"]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
